2017-02-07  Sam Varshavchik  <mrsam@courier-mta.com>

	* libs/tcpd/libcouriertls.c: OpenSSL API update.

4.17.3

2016-09-20  "Hanno Böck" <hanno@hboeck.de>

	* libs/maildrop/maildir.C (MaildirSave): Fix new/delete mismatch.
	* libs/sqwebmail/gpg.c: Fix external linkage.

4.17.2

2016-08-03  Sam Varshavchik  <mrsam@courier-mta.com>

	* imapd.c (do_folder_delete): Fix check for DELETE INBOX.

4.17.1

2016-04-30  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix TLS SNI code.

4.17.0

2016-04-23  Sam Varshavchik  <mrsam@courier-mta.com>

	* Stop using SSL2 and SSL3 openssl configuration methods.

2016-03-03  Sam Varshavchik  <mrsam@courier-mta.com>

	* libs/tcpd/libcouriertls.c: Add support for TLS SNI.

2016-01-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* imaplogin.c (starttls): flush stdin after negotiating STARTTLS.

2016-01-17  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix Courier-IMAP rpm build on pre-systemd systems.

4.16.2

2015-06-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* imap/mailboxlist.c (match_mailbox_prep): Use strncmp instead of
	memcmp, to pacify overzealous static analysis checkers.

2015-05-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* Drop SSLv3 from TLS_CIPHER_LIST.

2015-06-09  Sam Varshavchik  <mrsam@courier-mta.com>

	* imap, pop3: Added AUTH_MKHOMEDIR_SKEL setting.

4.16.1

2015-04-25  Giovanni Bechis <giovanni@openbsd.org>

	* maildircache.c: fix use after free.

	* mkdhparams: make compatible with libressl

2015-03-04  Sam Varshavchik  <mrsam@courier-mta.com>

	* Handle 01-Jan-1970 for date-based searches.

2015-02-28  Sam Varshavchik  <mrsam@courier-mta.com>

	* Update to courier-unicode 1.2.

2015-02-24  Sam Varshavchik  <mrsam@courier-mta.com>

	* Add the makeimapaccess script.

4.16.0

2014-10-21  Bernard Quatermass <bqcourier@quatermass.co.uk>

	* tcpd/libcouriertls.c: add parsing options for different protocol
	combination.

2014-10-21  坂元 英紀 <hs@on-sky.net>

	* Update comments in *ssl config files.
