@@ -54,8 +54,8 @@ rm -rf $RPM_BUILD_ROOT
 %{_libdir}/*.so
 %{_libdir}/*.la
 %{_libdir}/*.a
+%{_datadir}/aclocal/*.m4
 
 %changelog
 * Sun Jan 12 2014 Sam Varshavchik <mrsam@octopus.email-scan.com> - 1.0
 - Initial build.
-
