@@ -1,3 +1,7 @@
+2017-03-11  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* courier-unicode library API update.
+
 2017-02-07  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* libs/tcpd/libcouriertls.c: OpenSSL API update.
